--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node src/index.js"
+    "dev": "npx ts-node src/index.ts",
+    "start": "npx node build/index.js",
+    "build": "npx tsc -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/Lervana/courses-restaurant-manager-2.0/issues"
   },
-  "homepage": "https://github.com/Lervana/courses-restaurant-manager-2.0#readme"
+  "homepage": "https://github.com/Lervana/courses-restaurant-manager-2.0#readme",
+  "devDependencies": {
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
+  }
 }
