--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/Lervana/courses-restaurant-manager-2.0#readme",
   "devDependencies": {
     "@eslint/create-config": "^0.1.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.180",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -44,8 +46,12 @@
     ]
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
+    "helmet": "^5.0.2",
     "lodash": "^4.17.21",
     "winston": "^3.6.0",
     "winston-daily-rotate-file": "^4.6.1"
