--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Demo application for managing orders in a restaurant. Application written in TypeScript (Node.js).",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test",
     "dev": "cross-env NODE_ENV=development npx nodemon -r tsconfig-paths/register src/index.ts",
+    "test": "cross-env NODE_ENV=test npx ts-node -r tsconfig-paths/register src/index.ts",
     "start": "cross-env NODE_ENV=production npx node build/index.js",
     "build": "tsc-alias -p tsconfig.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "tests": "concurrently --kill-others \"npm run test\" \"jest\"",
+    "tests:watch": "concurrently --kill-others \"npm run test\" \"jest --watch\""
   },
   "repository": {
     "type": "git",
@@ -20,31 +22,6 @@
     "url": "https://github.com/Lervana/courses-restaurant-manager-2.0/issues"
   },
   "homepage": "https://github.com/Lervana/courses-restaurant-manager-2.0#readme",
-  "devDependencies": {
-    "@eslint/create-config": "^0.1.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/lodash": "^4.14.180",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.7",
-    "nodemon": "^2.0.15",
-    "prettier": "^2.6.0",
-    "ts-node": "^10.7.0",
-    "tsc": "^2.0.4",
-    "tsc-alias": "^1.6.5",
-    "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.6.2"
-  },
-  "lint-staged": {
-    "src/**/*": [
-      "eslint --fix",
-      "prettier --write --ignore-unknown"
-    ]
-  },
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
@@ -57,5 +34,35 @@
     "lodash": "^4.17.21",
     "winston": "^3.6.0",
     "winston-daily-rotate-file": "^4.6.1"
+  },
+  "devDependencies": {
+    "@eslint/create-config": "^0.1.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.180",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "axios": "^0.26.1",
+    "concurrently": "^7.1.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.6.0",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "tsc": "^2.0.4",
+    "tsc-alias": "^1.6.5",
+    "tsconfig-paths": "^3.14.1",
+    "typescript": "^4.6.3"
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "eslint --fix",
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
