--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
     "lodash": "^4.17.21",
+    "uuid": "^8.3.2",
     "winston": "^3.6.0",
     "winston-daily-rotate-file": "^4.6.1"
   },
@@ -41,6 +42,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.180",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "axios": "^0.26.1",
